# HTWK-C405-HWP2

./: .gitignore  CMakeLists.txt  CMakePresets.json  V6.PLD  V6.abs  V6.jed  V6.sim  main.cpp  template.tex  test.PLD
V5/: master.tex
V6/: gal.tex  general.tex  logic-gates.tex  master.tex
V7/: einleitung.tex  implementation.tex  kodierung.tex  master.tex
arduino/: platformio.ini
arduino/src/: bruno.cpp  main.cpp
b15f/: B15Communication.cpp  B15Communication.hpp  B15Fake.hpp  B15Receiver.cpp  B15Receiver.hpp  B15Sender.cpp  B15Sender.hpp  CMakeLists.txt  ComInterface.cpp  ComInterface.hpp  IoManagerB15F.cpp  IoManagerB15F.hpp  Main.cpp  RX.cpp  RX.h  TX.cpp  TX.h  Timer.cpp  Timer.hpp  b15global.cpp  b15global.hpp  crc.cpp  crc.hpp  main.cpp
docs/: einleitung.tex  erfolg.tex  geschwindigkeit.tex  implementation.tex  implentation.tex  kodierung.tex  master.tex  sender.tex  template.tex  verworfen.tex
images/: multithread.pdf_tex
lib/: AtomicBoolean.hpp  CMakeLists.txt  CRC.cpp  CRC.hpp  Codec.cpp  Codec.hpp  CommandObserver.cpp  Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  IoManager.cpp  IoManager.hpp  Observer.cpp  Observer.hpp  Packets.hpp  codec.cpp  codec.hpp  crc.cpp  crc.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  global.hpp  ioManager.cpp  ioManager.h  lib.cpp  lib.hpp  main.cpp  utilities.cpp  utilities.hpp
lib/header/: AtomicBoolean.hpp  AtomicQueue.hpp  BlockType.hpp  CRC.hpp  Codec.hpp  CodecCommand.hpp  ComManager.hpp  ControlPacketAssembler.hpp  ControlPacketDisassembler.hpp  ControlPanel.hpp  DataPacketAssembler.hpp  DataPacketDisassembler.hpp  DataStorage.hpp  Decoder.hpp  DecoderObserver.hpp  Encoder.hpp  ICommunicationInterface.hpp  IControlPacketDisassemblerObserver.hpp  IDecoderObserver.hpp  InterthreadNotification.hpp  IoManager.hpp  IoManagerB15F.hpp  IoManagerPc.hpp  Logger.hpp  NibbleCompressor.hpp  Packets.hpp  Sender.hpp  ThreadSafeQueue.hpp  Timer.hpp
lib/header/Receiver/: Receiver.hpp
lib/header/Sender/: Sender.hpp  SenderRessources.hpp  SenderState.hpp  SenderState_AwaitingResponse.hpp  SenderState_ReadyToCloseConnection.hpp  SenderState_ReadyToConnect.hpp  SenderState_Sending.hpp
lib/implementation/: AtomicBoolean.cpp  AtomicQueue.cpp  CRC.cpp  Codec.cpp  ComManager.cpp  ControlPacketAssembler.cpp  ControlPacketDisassembler.cpp  ControlPanel.cpp  DataPacketAssembler.cpp  DataPacketDisassembler.cpp  DataStorage.cpp  Decoder.cpp  DecoderObserver.cpp  Encoder.cpp  InterthreadNotification.cpp  IoManager.cpp  IoManagerB15F.cpp  IoManagerPc.cpp  Logger.cpp  NibbleCompressor.cpp  Sender.cpp  Timer.cpp
lib/implementation/Receiver/: Receiver.cpp
lib/implementation/Sender/: Sender.cpp  SenderState.cpp  SenderState_AwaitingResponse.cpp  SenderState_ReadyToCloseConnection.cpp  SenderState_ReadyToConnect.cpp  SenderState_Sending.cpp
pc/: CMakeLists.txt  ComInterface.cpp  ComInterface.hpp  DecoderObserver.cpp  DecoderObserver.hpp  IoManagerPc.cpp  IoManagerPc.hpp  Serial.cpp  Serial.hpp  SerialCommunication.cpp  SerialCommunication.hpp  main.cpp
test/: CMakeLists.txt  ComInterface.cpp  ComInterface.hpp  Serial.cpp  Serial.hpp  SerialCommunication.cpp  main.cpp
